Worked on contrast issues

--- a/bountifulFoods/styles/small.css
+++ b/bountifulFoods/styles/small.css
@@ -49,8 +49,8 @@ header
 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    background-color: #716c8b;
-    color: #ffffff;
+    background-color: #8c86aa;
+    color: black;
     padding: .5em;
     text-align: center;
 
@@ -107,7 +107,7 @@ ul {
 }
 
 a {
-    color: #ffffff;
+    color: black;
     text-decoration: none;
 }
 
@@ -124,7 +124,7 @@ nav a:hover {
 footer {
     text-align: center;
     background-color: #8c86aa;
-    color: white;
+    color: black;
 }
 
 /* --- MAIN CONTENT --- */
@@ -165,7 +165,7 @@ section {
 /* ORDER INFO SECTION */
 #orderInfoContainer {
     background-color: #8c86aa;
-    color: white;
+    color: black;
     margin: 0;
     border-radius: 0 0 25px 25px;
 }
@@ -193,7 +193,7 @@ section {
 
 #weatherContainer {
     background-color: #c6a9b8;
-    color: white;
+    color: black;
 }
 
 #threeDayForecast {
